增加了Jsch的依赖

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
+
 
 
 
